<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/liteBlack"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvExpression"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:gravity="end|bottom"
            android:textSize="30sp"
            android:text="" />

    </LinearLayout>
    <LinearLayout
        android:background="@color/liteBlack"
        style="@style/buttonRow">
         <Button
             android:id="@+id/AC"
             android:text="@string/ac"
             android:textColor="@color/Red"
             android:onClick="allCLear"
            style="@style/buttonColumn">
         </Button>

        <ImageButton
            android:id="@+id/clear"
            style="@style/buttonColumn"
            android:onClick="backSpace"
            android:src="@drawable/ibackspace">

        </ImageButton>

        <Button
            android:id="@+id/percentage"
            android:text="@string/percentage"
            android:textSize="35sp"
            android:onClick="onClickOperator"
            android:textColor="@color/Orange"
            style="@style/buttonColumn">
        </Button>

        <Button
            android:id="@+id/divide"
            style="@style/buttonColumn"
            android:onClick="onClickOperator"
            android:text="@string/divide"
            android:textColor="@color/Orange"
            android:textSize="35sp">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:background="@color/liteBlack"
        style="@style/buttonRow">
        <Button
            android:id="@+id/number7"
            android:text="@string/_7"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/number8"
            android:text="@string/_8"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/number9"
            android:text="@string/_9"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/multiplication"
            android:text="@string/multiply"
            android:textColor="@color/Orange"
            android:onClick="onClickOperator"
            android:textSize="20sp"
            style="@style/buttonColumn">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:background="@color/liteBlack"
        style="@style/buttonRow">
        <Button
            android:id="@+id/number4"
            android:text="@string/_4"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/number5"
            android:text="@string/_5"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/number6"
            android:text="@string/_6"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/Subtraction"
            android:text="@string/subtract"
            android:textSize="35sp"
            android:onClick="onClickOperator"
            android:textColor="@color/Orange"
            style="@style/buttonColumn">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:background="@color/liteBlack"
        style="@style/buttonRow">
        <Button
            android:id="@+id/number1"
            android:text="@string/_1"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/number2"
            android:text="@string/_2"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/number3"
            android:text="@string/_3"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>

        <Button
            android:id="@+id/addition"
            style="@style/buttonColumn"
            android:text="@string/addition"
            android:onClick="onClickOperator"
            android:textSize="35sp"
            android:textColor="@color/Orange">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:background="@color/liteBlack"
        style="@style/buttonRow">
        <Button
            android:id="@+id/number0"
            android:text="@string/_0"
            android:onClick="onClick"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/decimal"
            android:text="@string/decimal"
            android:textSize="35sp"
            android:onClick="onClickDecimal"
            style="@style/buttonColumn">
        </Button>
        <Button
            android:id="@+id/equals"
            android:text="@string/equal"
            android:layout_margin="4dp"
            android:background="@color/Orange"
            android:onClick="onEqual"
            android:layout_weight="2"
            style="@style/buttonColumn">
        </Button>

    </LinearLayout>

</LinearLayout>